--- a/templates/hola/animales.html.twig
+++ b/templates/hola/animales.html.twig
@@ -12,4 +12,5 @@
     <h1>{{ title }}</h1>
     <h2>Tu nombre es {{ nombre }}</h2>
     <h2>Tus apellidos son {{ apellidos }}</h2>
+    <h3>Probando.... pene</h3>
 {% endblock %}
